# uml-gen-java

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml
uml/: filter.yaml  umlc-gen-v3.yaml  umls-gen-v3.yaml
uml/.gen/: java_sequence_index.py  java_tree_sitter_frontend.py  java_tree_sitter_ir.py  java_tree_sitter_support.py  umlc.py  umlc_gen.py  umlgen_file_header.py  umlgen_legend.py  umlgen_yaml.py  umls.py  umls_gen.py  umls_hierarchy.py
uml/.gen/frontends/: __init__.py  base.py  registry.py
uml/.gen/umlgen_pkg/: __init__.py  ir_models.py  java_tree_sitter_frontend.py  java_tree_sitter_ir.py  mark.txt  umlc.py  umlc_gen.py  umlgen_cli.py  umlgen_file_header.py  umlgen_matched.py  umlgen_rule_match.py  umls.py  umls_gen.py
uml/.gen/umlgen_pkg/frontends/: registry.py
